@@ -17,6 +17,7 @@
     <properties>
         <java.version>25</java.version>
         <dotenv.version>5.1.0</dotenv.version>
+        <byte-buddy.version>1.18.11</byte-buddy.version>
     </properties>
 
     <dependencies>
@@ -157,22 +158,33 @@
             <optional>true</optional>
         </dependency>
 
+        <!-- Caching -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-cache</artifactId>
+        </dependency>
+
         <!-- RestClient is provided by spring-web already on classpath -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
             <scope>compile</scope>
         </dependency>
+
+        <!-- Actuator -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-prometheus</artifactId>
+            <scope>runtime</scope>
+        </dependency>
         <dependency>
             <groupId>jakarta.servlet</groupId>
             <artifactId>jakarta.servlet-api</artifactId>
             <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.datatype</groupId>
-            <artifactId>jackson-datatype-jsr310</artifactId>
-            <version>2.21.2</version>
-            <scope>compile</scope>
         </dependency>
 
         <!-- Development -->
@@ -255,6 +267,7 @@
                 <configuration>
                     <jvmArguments>
                         --add-opens java.base/sun.misc=ALL-UNNAMED
+                        -XX:+UseCompactObjectHeaders
                     </jvmArguments>
                     <excludes>
                         <exclude>
@@ -301,13 +314,16 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.5.6</version>
                 <configuration>
+                    <reuseForks>true</reuseForks>
+                    <forkCount>1</forkCount>
                     <parallel>classes</parallel>
-                    <threadCount>2</threadCount>
-                    <perCoreThreadCount>false</perCoreThreadCount>
-                    <reuseForks>false</reuseForks>
+                    <threadCount>0</threadCount>
+                    <perCoreThreadCount>true</perCoreThreadCount>
+
                     <!--suppress UnresolvedMavenProperty -->
                     <argLine>-javaagent:${org.mockito:mockito-core:jar} -XX:+EnableDynamicAgentLoading -Xmx1024m
                         -XX:+UseG1GC -XX:MaxDirectMemorySize=512m
+                        -XX:+UseCompactObjectHeaders
                     </argLine>
                 </configuration>
             </plugin>
